--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-langchain>=0.0.247
-streamlit>=1.25
-langsmith>=0.0.23
+streamlit
 openai
 tiktoken
 streamlit-feedback
+langchain>=0.0.247
+langsmith>=0.0.23
+
