--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ streamlit
 openai
 tiktoken
 streamlit-feedback
-# langchain>=0.0.247
-langchain==0.0.292
+langchain>=0.0.247
+# langchain==0.0.292
 langsmith>=0.0.23
 chromadb
 pysqlite3-binary
