Pinning streamlit + st-feedback + langsmith to latest version
Before:
streamlit
openai
tiktoken
streamlit-feedback
langchain>=0.0.247
# langchain==0.0.292
langsmith>=0.0.23
chromadb
pysqlite3-binary

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit
-openai
-tiktoken
-streamlit-feedback
+streamlit==1.27.0
+streamlit-feedback==0.1.2
 langchain>=0.0.247
 # langchain==0.0.292
-langsmith>=0.0.23
+langsmith==0.0.43
+openai
+tiktoken
 chromadb
 pysqlite3-binary
-
