--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ langchain==0.0.309 # new
 # langchain>=0.0.247 # worked
 # langchain==0.0.292
 langsmith==0.0.43
-openai
+openai==0.28.1
 chromadb==0.4.13
 tiktoken
 pysqlite3-binary
